fix editor z-index position

--- a/frontend/css/help.css
+++ b/frontend/css/help.css
@@ -32,6 +32,7 @@
   margin: 0;
   background-color: var(--color-code-background);
   border: 0;
+  z-index: 0;
 }
 
 .help-text code {
